@@ -1,7 +1,6 @@
 R/read_images.R
 R/xmltools.R
 R/exams_shiny.R
-R/include_tikz.R
 paper
 vignettes/screenshots/exams2qti12-tstat.png
 vignettes/screenshots/exams2moodle-tstat.png
