@@ -47,6 +47,9 @@ Changes in Version 2.3-1
     \usetikzlibrary{TRUE} was included. Also tex2image(..., Sweave = TRUE)
     (the default) did not run properly on Windows, fixed now.
 
+  o New function include_tikz() that facilitates compiling standalone
+    tikz figures and including it in an exercise.
+
   o Added support for \tightlist (as produced by pandoc) in all current
     LaTeX templates as well as exams2nops().
 
